--- a/styles/projects.css
+++ b/styles/projects.css
@@ -52,25 +52,14 @@
 }
 
 .tag {
-    /*color: white;*/
     border: 1px solid lightgray;
     border-radius: 10px;
-    height: 26px;
+    height: 15px;
     padding: 10px;
     margin-right: 5px;
-    margin-top: 20px;
-    display: inline;
+    margin-top: 15px;
+    display: inline-flex
 }
-
-.section:hover .overlay {
-  /*opacity: 1;*/
-}
-
-/*.overlay {
-    display: inline;
-    float: right;
-    cursor: pointer;
-}*/
 
 .subheader-2 {
     margin-bottom: 10px;
@@ -86,6 +75,8 @@
     .section {
         margin-top: 15%;
         margin-bottom: 5%;
+        box-shadow: none;
+        height: 100vh;
     }
 
     #projects {
@@ -102,13 +93,16 @@
         margin-right: 5vw;
     }
 
-    .overlay {
-        display: none;
+    .project-info {
+        display: block;
+        margin: 5vw;
+        width: 90vw;
+        top: 0%;
+        transform: translateY(0%);
     }
 
-    .mobile-caption {
-        display: block;
-        width: 90vw;
+    .tag {
         margin-top: 10px;
     }
+
 }
