--- a/styles/projects.css
+++ b/styles/projects.css
@@ -62,6 +62,7 @@
 }
 
 .subheader-2 {
+    margin-top: 10px;
     margin-bottom: 10px;
     width: 95%;
 }
@@ -84,6 +85,10 @@
         margin-right: 0%;
         width: 100vw;
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    #projects .header {
+        margin-left: 5vw;
     }
 
     .project-pic {
