--- a/styles/projects.css
+++ b/styles/projects.css
@@ -16,11 +16,16 @@
     box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     margin-bottom: 7vh;
-    transition: all 300ms ease;
+    -webkit-transition: transform 5s ease-in-out;
+    -moz-transition: transform 5s ease-in-out;
+    -o-transition: transform 5s ease-in-out;
+    transition: transform 5s ease-in-out;
 }
 
 .section:hover {
     -webkit-transform: scale(1.03);
+    -moz-transform: scale(1.03);
+    -o-transform: scale(1.03);
     -ms-transform: scale(1.03);
     transform: scale(1.03);
 }
