--- a/styles/projects.css
+++ b/styles/projects.css
@@ -16,10 +16,10 @@
     box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     margin-bottom: 7vh;
-    -webkit-transition: transform 5s ease-in-out;
-    -moz-transition: transform 5s ease-in-out;
-    -o-transition: transform 5s ease-in-out;
-    transition: transform 5s ease-in-out;
+    -webkit-transition: transform 200ms ease-in-out;
+    -moz-transition: transform 200ms ease-in-out;
+    -o-transition: transform 200ms ease-in-out;
+    transition: transform 200ms ease-in-out;
 }
 
 .section:hover {
