--- a/styles/global.css
+++ b/styles/global.css
@@ -98,6 +98,68 @@ li a {
   color: white;
 }
 
+.button {
+    box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.2);
+    text-align: center;
+    height: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+    display: inline-block;
+    margin-right: 20px;
+    border-radius: 10px;
+    line-height: 55px;
+    font-size: 16px;
+    font-weight: 900;
+    cursor: pointer;
+    -webkit-transition: transform 200ms ease-in-out;
+    -moz-transition: transform 200ms ease-in-out;
+    -o-transition: transform 200ms ease-in-out;
+    transition: transform 200ms ease-in-out;
+}
+
+.button:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.primary {
+    background-color: #6E88E2;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.secondary {
+    background-color: white;
+    box-shadow: 0 0 3pt 2pt #6E88E2;
+    color: #6E88E2;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+#arrow-down {
+    height: 40px;
+    width: 40px;
+    font-size: 40px;
+    text-align: center;
+    cursor: pointer;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-bottom: 40px;
+    z-index: 5;
+    color: black;
+    -webkit-transition: color 0.4s; /* Safari */
+    transition: color 0.4s;
+}
+
 /* Arrow scroll */
 #arrow-up {
 	display: none;
