--- a/styles/global.css
+++ b/styles/global.css
@@ -1,20 +1,9 @@
 /* Font faces */
 
 @font-face {
-	font-family: "Tokyo";
-	src: url("fonts/TokyoMerged-Regular.ttf");
+	font-family: "DMSerif";
+	src: url("fonts/DMSerifDisplay-Regular.ttf");
 }
-
-@font-face {
-	font-family: "Tokyo-Outline";
-	src: url("fonts/TokyoOutline-Regular.ttf");
-}
-
-@font-face {
-	font-family: "Tokyo-Regular";
-	src: url("fonts/TokyoRegular-Regular.ttf");
-}
-
 
 @font-face {
 	font-family: "Avenir";
@@ -38,26 +27,25 @@
 
 /* Table styles */
 table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 5px;
+		border: 1px solid black;
+		border-collapse: collapse;
+		padding: 5px;
 }
 
 /* Body */
 body {
-	font-family: "Avenir";
-	color: #414141;
-	font-size: 16px;
-	margin: 0 !important;
+	color: white;
+	background-color: #292929;
+	width: 1260px;
+	margin: auto;
 }
 
 a {
-	text-decoration: none;
+	text-decoration: underline;
+	color: #F29407;
 }
 
-p {
-	margin-top: 1vh;
-}
+
 
 .panel a {
 	text-decoration: none;
@@ -74,9 +62,9 @@ p {
 
 /* Bulleted lists */
 ul {
-    list-style-position: outside; 
-    margin-top: 1vh;
-    margin-bottom: 3vh;
+		list-style-position: outside; 
+		margin-top: 1vh;
+		margin-bottom: 3vh;
 }
 
 li {
@@ -89,81 +77,45 @@ li a {
 }
 
 ::selection {
-  background: rgb(233, 137, 137); /* WebKit/Blink Browsers */
-  color: white;
+	background: rgb(233, 137, 137); /* WebKit/Blink Browsers */
+	color: white;
 }
 
 ::-moz-selection {
-  background: rgb(233, 137, 137);; /* Gecko Browsers */
-  color: white;
+	background: rgb(233, 137, 137);; /* Gecko Browsers */
+	color: white;
 }
 
-.button {
-    box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.2);
-    text-align: center;
-    height: 50px;
-    padding-left: 15px;
-    padding-right: 15px;
-    display: inline-block;
-    margin-right: 20px;
-    border-radius: 7px;
-    line-height: 55px;
-    font-size: 16px;
-    font-weight: 900;
-    cursor: pointer;
-    -webkit-transition: transform 200ms ease-in-out;
-    -moz-transition: transform 200ms ease-in-out;
-    -o-transition: transform 200ms ease-in-out;
-    transition: transform 200ms ease-in-out;
-}
-
-.button:hover {
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.1);
-}
-
-.primary {
-    background-color: #6E88E2;
-    color: white;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-.secondary {
-    background-color: white;
-    box-shadow: 0 0 2pt 1pt #6E88E2;
-    color: #6E88E2;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-#arrow-down {
-    height: 40px;
-    width: 40px;
-    font-size: 40px;
-    text-align: center;
-    cursor: pointer;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-bottom: 40px;
-    z-index: 5;
+button {
+	text-align: center;
+	text-decoration: none;
+	height: 55px;
+	width: 190px;
+	cursor: pointer;
+	padding: 0;
+	padding-top: 5px;
     color: black;
-    -webkit-transition: color 0.4s; /* Safari */
-    transition: color 0.4s;
+    border: none;
+    background-color: white;
+    margin-top: 20px;
+	-webkit-transition: transform 200ms ease-in-out;
+	-moz-transition: transform 200ms ease-in-out;
+	-o-transition: transform 200ms ease-in-out;
+	transition: transform 200ms ease-in-out;
+}
+
+button:hover {
+		-webkit-transform: scale(1.05);
+		-moz-transform: scale(1.05);
+		-o-transform: scale(1.05);
+		-ms-transform: scale(1.05);
+		transform: scale(1.05);
 }
 
 /* Arrow scroll */
 #arrow-up {
 	display: none;
-	background-color: rgba(110, 136, 225, .5);
+	background-color: rgba(242, 148, 7, .5);
 	position: fixed;
 	/* position at bottom right of screen */
 	right: 8px;
@@ -172,47 +124,83 @@ li a {
 	width: 20px;
 	padding: 10px;
 	border-radius: 50%;
-    font-size: 20px;
-    color: black;
-    text-align: center;
+		font-size: 20px;
+		color: black;
+		text-align: center;
 	/*box-shadow: 1px 1px 15px #e5e5e5;*/
 	cursor: pointer;
 	z-index: 6;
-    -webkit-transition: background 200ms ease-in-out;
-    -moz-transition: background 200ms ease-in-out;
-    -o-transition: background 200ms ease-in-out;
-    transition: background 200ms ease-in-out;
+		-webkit-transition: background 200ms ease-in-out;
+		-moz-transition: background 200ms ease-in-out;
+		-o-transition: background 200ms ease-in-out;
+		transition: background 200ms ease-in-out;
 }
 
 #arrow-up:hover {
-	background: rgba(110, 136, 225, .8);
-}
-
-/* Margins */
-.margin-medium {
-	margin: 10%;
-	padding-top: 5%;
-	display: inline-block;
+	background-color: rgba(242, 148, 7, .8);
 }
 
 /* Text Styles */
+h1 {
+	font-family: "DMSerif";
+	font-weight: 400;
+	font-size: 5rem;
+	line-height: 5rem;
+	margin-block-end: 0;
+	margin-block-start: 0;
+}
+
+h2 {
+	font-family: "DMSerif";
+	font-weight: 400;
+	font-size: 3rem;
+	margin-block-end: 0;
+	margin-block-start: 0;
+}
+
+h3 {
+	font-family: "Avenir";
+	font-size: 1.5rem;
+	color: white;
+	margin-block-end: 0;
+	margin-block-start: 0;
+}
+
+h4 {
+	font-family: "Avenir Bold";
+	font-size: 1.125rem;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	color: white;
+	margin-block-end: 0rem;
+	margin-block-start: 0rem;
+}
+
+p {
+	font-family: "Avenir";
+	font-size: 1rem;
+	margin-top: 1vh;
+	color: white;
+}
+
+
 .header {
 	font-family: "Tokyo-Outline";
 	font-size: 4.2em;
 	line-height: 1em;
-    width: 70%;
-    margin-right: 5%;
+	width: 70%;
+	margin-right: 5%;
 }
 
 .proj-header {
-    font-family: "Tokyo-Regular";
-    line-height: .9em;
-    font-size: 2.5em;
-    text-align: left; 
-    margin-left: 0%;
-    margin-bottom: 5%;
-    width: 80%;
-    color: black;
+		font-family: "Tokyo-Regular";
+		line-height: .9em;
+		font-size: 2.5em;
+		text-align: left; 
+		margin-left: 0%;
+		margin-bottom: 5%;
+		width: 80%;
+		color: black;
 }
 
 .subheader {
@@ -234,7 +222,7 @@ li a {
 	letter-spacing: 3px;
 	font-size: 1.4em;
 	text-transform: uppercase;
-    font-family: "Avenir Bold";
+		font-family: "Avenir Bold";
 	color: black;
 }
 
@@ -246,6 +234,10 @@ li a {
 
 .space {
 	height: 3vh;
+}
+
+.large-space {
+	height: 8vh;
 }
 
 .double-pic-text {
@@ -289,19 +281,19 @@ li a {
 .title-wrapper {
 	width: 100vw;
 	height: 65vh;
-    position: absolute;
-    z-index: 1;
+		position: absolute;
+		z-index: 1;
 	left: 0;
-    top: 48px;
-    display: flex;
+		top: 48px;
+		display: flex;
 }
 
 .title {
 	margin-left: 20%;
 	width: 36%;
-    align-self: center;
-    justify-self: center;
-    opacity: 0;
+		align-self: center;
+		justify-self: center;
+		opacity: 0;
 }
 
 .context {
@@ -330,10 +322,10 @@ li a {
 
 .short-divider {
 	height: 5px;
-	width: 100%;
-	margin-top: 5%;
-	margin-bottom: 5%;
-	background-color: #e98989;
+	width: 100px;
+	margin-top: 1%;
+	margin-bottom: 3%;
+	background-color: white;
 	position: block;
 }
 
@@ -348,45 +340,45 @@ li a {
 
 .content {
 	width: 60%;
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-top: 5%;
-    padding-bottom: 5%;
+		padding-left: 20%;
+		padding-right: 20%;
+		padding-top: 5%;
+		padding-bottom: 5%;
 	position: relative;
-    display: inline-flex;
+		display: inline-flex;
 	opacity: 0;
-    background-color: white;
+		background-color: white;
 }
 
 .panel {
 	width: 60%;
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-top: 5%;
-    padding-bottom: 5%;
+		padding-left: 20%;
+		padding-right: 20%;
+		padding-top: 5%;
+		padding-bottom: 5%;
 	position: relative;
-    display: inline-table;
-    background-color: white;
-    opacity: 0;
+		display: inline-table;
+		background-color: white;
+		opacity: 0;
 }
 
 .gray {
-    background-color: #eeeeee;
+		background-color: #eeeeee;
 }
 
 .gray-gradient {
-    background-image: linear-gradient(#eeeeee, white);
+		background-image: linear-gradient(#eeeeee, white);
 }
 
 /* Picture styles */
 .big-pic {
 	width: 52%;
-    height: 100%;
-    padding-left: 48%;
+		height: 100%;
+		padding-left: 48%;
 	display: inline;
-    margin-top: 48px;
-    position: sticky;
-    opacity: 0;
+		margin-top: 48px;
+		position: sticky;
+		opacity: 0;
 }
 
 #pic-space {
@@ -421,8 +413,8 @@ li a {
 
 .dark {
 	background-color: #272727; 
-    width: 100%;
-    padding: 0%;
+		width: 100%;
+		padding: 0%;
 }
 
 /* Next button */
@@ -433,25 +425,25 @@ li a {
 	font-weight: 600;
 	letter-spacing: 2px;
 	font-size: 14px;
-    line-height: 12px;
+		line-height: 12px;
 	text-align: center;
 	cursor: pointer;
 	margin: 5%;
-    vertical-align: middle;
+		vertical-align: middle;
 
 	display: flex;
 	justify-content: center;
 	align-items: center;
 
 	opacity: 1;
-    -webkit-transition: opacity 0.6s; /* Safari */
-    transition: opacity 0.6s;
+		-webkit-transition: opacity 0.6s; /* Safari */
+		transition: opacity 0.6s;
 }
 
 .next-project:hover {
 	opacity: 0.8;
-    -webkit-transition: opacity 0.6s; /* Safari */
-    transition: opacity 0.6s;
+		-webkit-transition: opacity 0.6s; /* Safari */
+		transition: opacity 0.6s;
 }
 
 .fa-caret-right, .fa-caret-left {
@@ -463,105 +455,105 @@ li a {
 
 
 /*.preload * {
-  -webkit-transition: ease;
-  -moz-transition: ease;
-  -ms-transition: ease;
-  -o-transition: ease;
+	-webkit-transition: ease;
+	-moz-transition: ease;
+	-ms-transition: ease;
+	-o-transition: ease;
 }*/
 
 .animate-reveal {
-  opacity: 0;
-  -webkit-animation: reveal 1s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
-     -moz-animation: reveal 1s ease-in 1 normal forwards;
-       -o-animation: reveal 1s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
-          animation: reveal 1s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
+	opacity: 0;
+	-webkit-animation: reveal 1s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
+		 -moz-animation: reveal 1s ease-in 1 normal forwards;
+			 -o-animation: reveal 1s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
+					animation: reveal 1s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
 }
 
 .animate-first {
-  -webkit-animation-delay: 0;
-     -moz-animation-delay: 0;
-       -o-animation-delay: 0;
-          animation-delay: 0;
+	-webkit-animation-delay: 0;
+		 -moz-animation-delay: 0;
+			 -o-animation-delay: 0;
+					animation-delay: 0;
 }
 
 .animate-second {
-  -webkit-animation-delay: 500ms;
-     -moz-animation-delay: 500ms;
-       -o-animation-delay: 500ms;
-          animation-delay: 500ms;
+	-webkit-animation-delay: 500ms;
+		 -moz-animation-delay: 500ms;
+			 -o-animation-delay: 500ms;
+					animation-delay: 500ms;
 }
 
 .animate-third {
-  -webkit-animation-delay: 1s;
-     -moz-animation-delay: 1s;
-       -o-animation-delay: 1s;
-          animation-delay: 1s;
+	-webkit-animation-delay: 1s;
+		 -moz-animation-delay: 1s;
+			 -o-animation-delay: 1s;
+					animation-delay: 1s;
 }
 
 @-webkit-keyframes reveal {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-       -moz-transform: translateY(100%);
-         -o-transform: translateY(100%);
-            transform: translateY(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-       -moz-transform: translateY(0);
-         -o-transform: translateY(0);
-            transform: translateY(0);
-  }
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(100%);
+			 -moz-transform: translateY(100%);
+				 -o-transform: translateY(100%);
+						transform: translateY(100%);
+	}
+	100% {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+			 -moz-transform: translateY(0);
+				 -o-transform: translateY(0);
+						transform: translateY(0);
+	}
 }
 
 @-moz-keyframes reveal {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-       -moz-transform: translateY(100%);
-         -o-transform: translateY(100%);
-            transform: translateY(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-       -moz-transform: translateY(0);
-         -o-transform: translateY(0);
-            transform: translateY(0);
-  }
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(100%);
+			 -moz-transform: translateY(100%);
+				 -o-transform: translateY(100%);
+						transform: translateY(100%);
+	}
+	100% {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+			 -moz-transform: translateY(0);
+				 -o-transform: translateY(0);
+						transform: translateY(0);
+	}
 }
 
 @-o-keyframes reveal {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-       -moz-transform: translateY(100%);
-         -o-transform: translateY(100%);
-            transform: translateY(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-       -moz-transform: translateY(0);
-         -o-transform: translateY(0);
-            transform: translateY(0);
-  }
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(100%);
+			 -moz-transform: translateY(100%);
+				 -o-transform: translateY(100%);
+						transform: translateY(100%);
+	}
+	100% {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+			 -moz-transform: translateY(0);
+				 -o-transform: translateY(0);
+						transform: translateY(0);
+	}
 }
 
 @keyframes reveal {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-       -moz-transform: translateY(100%);
-         -o-transform: translateY(100%);
-            transform: translateY(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-       -moz-transform: translateY(0);
-         -o-transform: translateY(0);
-            transform: translateY(0);
-  }
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(100%);
+			 -moz-transform: translateY(100%);
+				 -o-transform: translateY(100%);
+						transform: translateY(100%);
+	}
+	100% {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+			 -moz-transform: translateY(0);
+				 -o-transform: translateY(0);
+						transform: translateY(0);
+	}
 }
