--- a/styles/home.css
+++ b/styles/home.css
@@ -1,123 +1,39 @@
-:root{
-    --featured-color: white; /*#e98989;*/
-}
-
-body a {
-    color: black;
-}
-
 #home {
-	z-index: 4;
-    height: 100vh;
-    width: 100vw;
-    background-color: white;
+    margin-top: 250px;
+    margin-bottom: 10%;
+    width: 100%;
+    display: inline-block;
 }
-
 
 #intro {
-    padding-left: 10%;
-    padding-right: 10%; 
-    padding-top: 5%;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-
-#home-wrapper {
-    width: 55%;
-    display: inline;
+    z-index: 4;
     float: left;
+    position: absolute;
+    width: 55%;
+    padding-top: 5%;
 }
 
-.home-pic {
-    width: 45%;
-    margin-top: -5%;
+#home-pic {
+    z-index: 3;
+    width: 35%;
+    display: inline;
+    float: right;
 }
 
-.home-pic-mobile {
-    display: none;
-}
 
-#intro-2 {
-    font-size: 24px;
-    position: relative;
-    margin-bottom: 5vh;
-    width: 90%;
-    font-family: "Avenir";
-    color: black;
-    z-index: 10;
-}
-
-.subheader {
-    margin-bottom: 20px;
-}
-
-.subheader-2 {
-    margin-top: 10px;
-}
-
-#name {
-    font-family: "Tokyo-Outline";
-    /* color: white; */
-	font-size: 30px;
-}
-
-#home-text-description {
-    font-size: 56px;
-    font-family: "Tokyo-Outline";
-}
-
-#arrow-down:hover {
-    color: white;
-    -webkit-transition: color 0.4s; /* Safari */
-    transition: color 0.4s;
-}
-
-#design-philosophy {
-    background-color: #DDE5FF;
-    padding: 10%;
-}
-
-.philosophy-card {
-    display: inline-block;
-    vertical-align: middle;
-    width: 20vw;
-    height: auto;
-    padding: 3%;
-    background-color: white;
-    box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    -webkit-transition: transform 200ms ease-in-out;
-    -moz-transition: transform 200ms ease-in-out;
-    -o-transition: transform 200ms ease-in-out;
-    transition: transform 200ms ease-in-out;
-}
-
-.philosophy-card:hover {
-    -webkit-transform: scale(1.03);
-    -moz-transform: scale(1.03);
-    -o-transform: scale(1.03);
-    -ms-transform: scale(1.03);
-    transform: scale(1.03);
-}
-
-.philosophy-card-icon {
-    border-radius: 100px;
-    width: 60px;
-    height: 60px;
-    color: white;
-    text-align: center;
-    font-size: 32px;
-    line-height: 65px;
-    margin-right: 10px;
-    vertical-align: middle;
+#about {
+    padding: 105px;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    background-color: #161818;
     display: inline-block;
 }
 
-.margin-medium {
-    margin-top: 8%;
+#projects {
+    display: inline-block;
+    margin-top: 5%;
 }
+
 
 /* View all button */
 #view-all-btn {
