--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,33 +1,13 @@
-
-
-#projects a {
-    text-decoration: none;
-    color: black;
-}
-
 #projects .subheader-4 {
     font-weight: 100;
 }
 
 .section {
     position: relative;
-    width: 80vw;
+    width: 100%;
     height: 30vw;
-    box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     margin-bottom: 7vh;
-    -webkit-transition: transform 200ms ease-in-out;
-    -moz-transition: transform 200ms ease-in-out;
-    -o-transition: transform 200ms ease-in-out;
-    transition: transform 200ms ease-in-out;
-}
-
-.section:hover {
-    -webkit-transform: scale(1.03);
-    -moz-transform: scale(1.03);
-    -o-transform: scale(1.03);
-    -ms-transform: scale(1.03);
-    transform: scale(1.03);
 }
 
 .project-pic {
@@ -38,6 +18,7 @@
     height: 30vw;
     margin-right: 1vw;
     margin-bottom: 1vw;
+    border-radius: 50%;
 }
 
 .project-info {
