finished updating fms

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,6 +1,8 @@
 #my-nav {
 	height: 110px;
-	width: 1260px;
+	width: 100vw;
+	margin-left: -50vw;
+	left: 50%;
 	padding-top: 10px;
 	position: fixed;
 	z-index: 100;
