--- a/styles/global.css
+++ b/styles/global.css
@@ -69,11 +69,16 @@ ul {
 
 li {
 	list-style-type: circle;
+	font-family: "Avenir";
+	font-size: 1rem;
+	margin-top: 1vh;
+	color: white;
 }
 
 li a {
-	color: black;
+	color: white;
 	margin-bottom: 3%;
+
 }
 
 ::selection {
@@ -160,25 +165,26 @@ h2 {
 
 h3 {
 	font-family: "Avenir";
-	font-size: 1.5rem;
+	font-size: 1.75rem;
 	color: white;
 	margin-block-end: 0;
 	margin-block-start: 0;
+	margin-top: 1vh;
 }
 
 h4 {
 	font-family: "Avenir Bold";
-	font-size: 1.125rem;
+	font-size: 1.25rem;
 	letter-spacing: 2px;
 	text-transform: uppercase;
-	color: white;
+	color: #F2F2F2;
 	margin-block-end: 0rem;
 	margin-block-start: 0rem;
 }
 
 p {
 	font-family: "Avenir";
-	font-size: 1rem;
+	font-size: 1.25rem;
 	margin-top: 1vh;
 	color: white;
 }
@@ -281,19 +287,19 @@ p {
 .title-wrapper {
 	width: 100vw;
 	height: 65vh;
-		position: absolute;
-		z-index: 1;
+	position: absolute;
+	z-index: 1;
 	left: 0;
-		top: 48px;
-		display: flex;
+	top: 48px;
+	display: flex;
 }
 
 .title {
 	margin-left: 20%;
-	width: 36%;
-		align-self: center;
-		justify-self: center;
-		opacity: 0;
+	width: 45%;
+	align-self: center;
+	justify-self: center;
+	opacity: 0;
 }
 
 .context {
@@ -351,19 +357,18 @@ p {
 }
 
 .panel {
-	width: 60%;
-		padding-left: 20%;
-		padding-right: 20%;
-		padding-top: 5%;
-		padding-bottom: 5%;
+	width: 80%;
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-top: 5%;
+	padding-bottom: 5%;
 	position: relative;
-		display: inline-table;
-		background-color: white;
-		opacity: 0;
+	display: inline-table;
+	opacity: 0;
 }
 
 .gray {
-		background-color: #eeeeee;
+	background-color: #161818;
 }
 
 .gray-gradient {
@@ -373,12 +378,12 @@ p {
 /* Picture styles */
 .big-pic {
 	width: 52%;
-		height: 100%;
-		padding-left: 48%;
+	height: 100%;
+	padding-left: 48%;
 	display: inline;
-		margin-top: 48px;
-		position: sticky;
-		opacity: 0;
+	margin-top: 120px;
+	position: sticky;
+	opacity: 0;
 }
 
 #pic-space {
@@ -412,7 +417,7 @@ p {
 }
 
 .dark {
-	background-color: #272727; 
+	background-color: #161818; 
 		width: 100%;
 		padding: 0%;
 }
