--- a/styles/global.css
+++ b/styles/global.css
@@ -165,7 +165,7 @@ h2 {
 
 h3 {
 	font-family: "Avenir";
-	font-size: 1.75rem;
+	font-size: 1.5rem;
 	color: white;
 	margin-block-end: 0;
 	margin-block-start: 0;
@@ -175,7 +175,7 @@ h3 {
 h4 {
 	font-family: "Avenir Bold";
 	font-size: 1.25rem;
-	letter-spacing: 2px;
+	letter-spacing: 3px;
 	text-transform: uppercase;
 	color: #F2F2F2;
 	margin-block-end: 0rem;
@@ -184,7 +184,7 @@ h4 {
 
 p {
 	font-family: "Avenir";
-	font-size: 1.25rem;
+	font-size: 1.125rem;
 	margin-top: 1vh;
 	color: white;
 }
@@ -294,8 +294,18 @@ p {
 	display: flex;
 }
 
+.full-width {
+	width: 100vw;
+	position: relative;
+	left: 50%;
+	right: 50%;
+	margin-left: -50vw;
+	margin-right: -50vw;
+	margin-bottom: 5%;
+}
+
 .title {
-	margin-left: 20%;
+	margin-left: 15%;
 	width: 45%;
 	align-self: center;
 	justify-self: center;
@@ -337,29 +347,27 @@ p {
 
 .divider {
 	height: 2px;
+	background-color: white; 
+	margin-top: 3%;
+	margin-bottom: 5%;
 	width: 100%;
-	margin-top: 1%;
-	margin-bottom: 1%;
-	background-color: none;
 	position: block;
 }
 
 .content {
 	width: 60%;
-		padding-left: 20%;
-		padding-right: 20%;
-		padding-top: 5%;
-		padding-bottom: 5%;
+	padding-left: 20%;
+	padding-right: 20%;
+	padding-top: 5%;
+	padding-bottom: 5%;
 	position: relative;
-		display: inline-flex;
+	display: inline-flex;
 	opacity: 0;
-		background-color: white;
+	background-color: white;
 }
 
 .panel {
-	width: 80%;
-	padding-left: 10%;
-	padding-right: 10%;
+    width: 100%;
 	padding-top: 5%;
 	padding-bottom: 5%;
 	position: relative;
@@ -369,6 +377,7 @@ p {
 
 .gray {
 	background-color: #161818;
+/*	padding-left: calc((100vw - 1260px) / 2);*/
 }
 
 .gray-gradient {
@@ -391,14 +400,18 @@ p {
 }
 
 .pic-right {
-	border: 1px solid #e0e0e0; 
 	width: 100%; 
 	margin-top: 20px; 
 	margin-bottom: 20px;
+	background-color: white;
 }
 
 .pic-left {
-	width: 100%; 
+	width: 80%; 
+	height: auto; 
+	padding: 10%;
+	padding-top: 5%;
+	padding-bottom: 5%;
 	display: inline-block;
 }
 
