--- a/styles/global.css
+++ b/styles/global.css
@@ -165,7 +165,7 @@ h2 {
 
 h3 {
 	font-family: "Avenir";
-	font-size: 1.5rem;
+	font-size: 1.35rem;
 	color: white;
 	margin-block-end: 0;
 	margin-block-start: 0;
@@ -174,7 +174,7 @@ h3 {
 
 h4 {
 	font-family: "Avenir Bold";
-	font-size: 1.25rem;
+	font-size: 1.125rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
 	color: #F2F2F2;
@@ -286,11 +286,11 @@ p {
 
 .title-wrapper {
 	width: 100vw;
-	height: 65vh;
+	height: 75vh;
 	position: absolute;
 	z-index: 1;
 	left: 0;
-	top: 48px;
+	top: 60px;
 	display: flex;
 }
 
@@ -387,7 +387,7 @@ p {
 /* Picture styles */
 .big-pic {
 	width: 52%;
-	height: 100%;
+	height: auto;
 	padding-left: 48%;
 	display: inline;
 	margin-top: 120px;
@@ -403,7 +403,7 @@ p {
 	width: 100%; 
 	margin-top: 20px; 
 	margin-bottom: 20px;
-	background-color: white;
+	/*background-color: #161818;*/
 }
 
 .pic-left {
