--- a/styles/projects.css
+++ b/styles/projects.css
@@ -65,34 +65,28 @@
 @media only screen and (max-width: 900px) {
 
     .section {
-        margin-top: 15%;
+        margin-top: 5%;
         margin-bottom: 5%;
         box-shadow: none;
         height: 100vh;
+        display: inline-table;
     }
 
     #projects {
-        margin-left: 0%;
-        margin-right: 0%;
-        width: 100vw;
-        grid-template-columns: repeat(1, 1fr);
-    }
 
-    #projects .header {
-        margin-left: 5vw;
     }
 
     .project-pic {
-        height: 90vw;
-        width: 90vw;
-        margin-left: 5vw;
-        margin-right: 5vw;
+        width: 100%;
+        height: auto;
+        margin-bottom: 5%;
+        border-radius: 0;
     }
 
     .project-info {
         display: block;
         margin: 5vw;
-        width: 90vw;
+        width: 100%;
         top: 0%;
         transform: translateY(0%);
     }
