--- a/styles/global.css
+++ b/styles/global.css
@@ -186,6 +186,7 @@ p {
 	font-family: "Avenir";
 	font-size: 1.125rem;
 	margin-top: 1vh;
+	margin-bottom: 3vh;
 	color: white;
 }
 
@@ -253,8 +254,8 @@ p {
 
 .left {
 	float: left;
-	width: 20%;
-	margin-right: 10%;
+	width: 25%;
+	margin-right: 5%;
 	display: inline-block;
 }
 
@@ -287,10 +288,12 @@ p {
 .title-wrapper {
 	width: 100vw;
 	height: 75vh;
+	padding-left: 5%;
+	padding-right: 5%;
 	position: absolute;
 	z-index: 1;
 	left: 0;
-	top: 60px;
+	top: 0px;
 	display: flex;
 }
 
@@ -305,11 +308,11 @@ p {
 }
 
 .title {
-	margin-left: 15%;
 	width: 45%;
-	align-self: center;
-	justify-self: center;
 	opacity: 0;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .context {
@@ -386,13 +389,15 @@ p {
 
 /* Picture styles */
 .big-pic {
-	width: 52%;
-	height: auto;
-	padding-left: 48%;
+	height: 70vh;
+	width: auto;
+	float: right;
 	display: inline;
-	margin-top: 120px;
 	position: sticky;
 	opacity: 0;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 #pic-space {
