--- a/styles/about.css
+++ b/styles/about.css
@@ -1,11 +1,9 @@
-body {
-	margin: 0 !important;
-	font-family: "Avenir";
-    font-weight: 200;   
+a {
+	color: #F29407
 }
 
-a {
-	color: #e98989;
+#about {
+	margin-top: 120px;
 }
 
 #about-pic {
