--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -1,26 +1,9 @@
-@media only screen and (max-width: 1260px) {
-    body {
-        width: 1100px;
-    }	
-}
-
-@media only screen and (max-width: 1100px) {
-    body {
-        width: 800px;
-    }	
-}
-
-@media only screen and (max-width: 450px) {
-    body {
-        width: 400px;
-    }	
-}
-
 @media only screen and (max-width: 770px) {
 
     body {
         position: relative;
-        width: 700px;
+        width: 96%;
+        margin: auto;
     }
 
     .margin-medium {
