moved all subheaders into body text, updated outdated header styles

--- a/styles/home.css
+++ b/styles/home.css
@@ -22,9 +22,9 @@
 
 
 #about {
-    padding: 105px;
-    padding-top: 75px;
-    padding-bottom: 75px;
+    padding: 5%;
+    padding-top: 3%;
+    padding-bottom: 1%;
     background-color: #161818;
     display: inline-block;
 }
