--- a/styles/global.css
+++ b/styles/global.css
@@ -70,7 +70,7 @@ ul {
 li {
 	list-style-type: circle;
 	font-family: "Avenir";
-	font-size: 1rem;
+	font-size: 1.125rem;
 	margin-top: 1vh;
 	color: white;
 }
@@ -178,7 +178,7 @@ h4 {
 	font-size: 1rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
-	color: #F2F2F2;
+	color: white;
 	margin-block-end: 0rem;
 	margin-block-start: 0rem;
 }
@@ -186,8 +186,8 @@ h4 {
 p {
 	font-family: "Avenir";
 	font-size: 1.125rem;
-	margin-top: 1vh;
-	margin-bottom: 3vh;
+	margin-top: .5rem;
+	margin-bottom: 1rem;
 	color: white;
 }
 
@@ -212,8 +212,8 @@ p {
 }
 
 .right {
-	width: 70%;
-	float: right;
+	width: 60%;
+	margin-left: 20%;
 	display: inline-block;
 	top: 0;	
 }
@@ -284,11 +284,17 @@ p {
 
 .divider {
 	height: 2px;
-	background-color: white; 
-	margin-top: 3%;
-	margin-bottom: 5%;
-	width: 100%;
+	background-color: #505050; 
+	margin-top: 2%;
+	margin-bottom: 2%;
+	width: 70%;
+	margin-left: 15%;
 	position: block;
+}
+
+#projects .divider {
+	width: 100%;
+	margin-left: 0;
 }
 
 .content {
