--- a/styles/nav.css
+++ b/styles/nav.css
@@ -127,9 +127,9 @@ header {
 }
 
 .contact-text {
-	width: 15vw;
+	width: 30%%;
 	text-align: left;
-	margin-left: 3vw;
+	margin-left: 5%;
 	display: inline-block;
 	vertical-align: top;
 }
