--- a/styles/nav.css
+++ b/styles/nav.css
@@ -128,7 +128,7 @@ header {
 }
 
 .contact-text {
-	width: 30%%;
+	width: 35%;
 	text-align: left;
 	margin-left: 10%;
 	display: inline-block;
@@ -138,7 +138,8 @@ header {
 #footer-links {
 	float: right; 
 	display: inline-block; 
-	width: 50%
+	width: 50%;
+	text-align: right;
 }
 
 #social {
