--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -47,20 +47,13 @@
 		margin-bottom: 10px;
 	}
 
-	.body {
-		font-size: 18px;
-	}
-
-	.double-pic-text {
-		width: 100%;
-	}
-
 	.left {
 		width: 100%;
 	}
 
 	.right {
 		width: 100%;
+        margin-left: 0;
 	}
 
 	.context-summary {
@@ -98,28 +91,18 @@
         padding-top: 80%;
         display: none;
     }
+
+    .triple-pics {
+        width: 30%;
+    }
     
     #pic-space {
         display: none;
     }
 
-	.double-pics {
-		width: 44%;
-	}
-
-	.triple-pics {
-		width: 30%;
-	}
-
 	.divider {
 		margin-top: 3%;
 		margin-bottom: 3%;
-	}
-
-	.next-project {
-		width: 100%;
-        margin: 0%;
-        margin-bottom: 3%;
 	}
     
     .panel {
