--- a/styles/home.css
+++ b/styles/home.css
@@ -24,6 +24,9 @@
 
 
 #about {
+    width: 60%;
+    margin-left: 15%;
+    margin-right: 15%;
     padding: 5%;
     padding-top: 5%;
     padding-bottom: 3%;
@@ -135,6 +138,7 @@
     }
 
     #about {
+        width: 100%;
         margin: 0px;
         padding: 5%;
     }
