--- a/styles/global.css
+++ b/styles/global.css
@@ -35,7 +35,7 @@ table, th, td {
 /* Colors */
 :root {
   --orange: #F29407;
-  --purple: #8D63B0;
+  --purple: #a061d5;
   --green: #18b276;
   --pink: #FE7062;
   --mediumgray: #292929;
