--- a/styles/global.css
+++ b/styles/global.css
@@ -25,6 +25,16 @@
 	src: url("fonts/Avenir-Bold.ttf");
 }
 
+@font-face {
+	font-family: "Barlow Regular";
+	src: url("fonts/Barlow/Barlow-Regular.ttf");
+}
+
+@font-face {
+	font-family: "Barlow Extrabold";
+	src: url("fonts/Barlow/Barlow-ExtraBold.ttf");
+}
+
 /* Table styles */
 table, th, td {
 		border: 1px solid black;
@@ -40,20 +50,22 @@ table, th, td {
   --pink: #FE7062;
   --mediumgray: #292929;
   --darkgray: #161818;
+  --white: #f3f3f3;
+  --lightpink: #e4ddde;
 }
 
 /* Body */
 body {
-	color: white;
-	background-color: var(--mediumgray);
+	color: black;
+	background-color: var(--white);
 	width: 90%;
 	margin: auto;
 }
 
 /* Links */
 a {
-	text-decoration: underline;
-	color: var(--orange);
+	text-decoration: none;
+	color: var(--pink);
 }
 
 .panel a {
@@ -78,14 +90,12 @@ ul {
 
 li {
 	list-style-type: circle;
-	font-family: "Avenir";
+	font-family: "Barlow Regular";
 	font-size: 1.125rem;
 	margin-top: 1vh;
-	color: white;
 }
 
 li a {
-	color: white;
 	margin-bottom: 3%;
 
 }
@@ -107,23 +117,19 @@ button {
 	width: 190px;
 	cursor: pointer;
 	padding: 0;
-	padding-top: 5px;
     color: black;
     border: none;
     background-color: white;
+    border: 2px solid black;
     margin-top: 20px;
-	-webkit-transition: transform 200ms ease-in-out;
-	-moz-transition: transform 200ms ease-in-out;
-	-o-transition: transform 200ms ease-in-out;
-	transition: transform 200ms ease-in-out;
+
+  	transition: background-color 0.2s ease-in-out,
+              	color 0.2s ease-in-out;
 }
 
 button:hover {
-		-webkit-transform: scale(1.05);
-		-moz-transform: scale(1.05);
-		-o-transform: scale(1.05);
-		-ms-transform: scale(1.05);
-		transform: scale(1.05);
+	background-color: black;
+	color: white;
 }
 
 /* Arrow scroll */
@@ -174,30 +180,27 @@ h2 {
 }
 
 h3 {
-	font-family: "Avenir";
+	font-family: "Barlow Regular";
 	font-size: 1.5rem;
-	color: white;
 	margin-block-end: 0;
 	margin-block-start: 0;
 	margin-top: 1vh;
 }
 
 h4 {
-	font-family: "Avenir Bold";
+	font-family: "Barlow Extrabold";
 	font-size: 1rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
-	color: white;
 	margin-block-end: 0rem;
 	margin-block-start: 0rem;
 }
 
 p {
-	font-family: "Avenir";
+	font-family: "Barlow Regular";
 	font-size: 1.125rem;
 	margin-top: .5rem;
 	margin-bottom: 1rem;
-	color: white;
 }
 
 .space {
