--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,20 +1,21 @@
 header {
-	height: 110px;
-	width: 100vw;
+	height: 50px;
+	width: 90vw;
 	top: 0;
 	margin-left: -50vw;
+	padding-right: 10%;
 	left: 50%;
-	padding-top: 10px;
+	padding-top: 20px;
 	position: fixed;
 	z-index: 100;
 	text-align: center;
-	background-color: rgba(41, 41, 41, 0.9);
+	background-color: var(--darkgray);
 	transition: top 0.2s ease-in-out;
 	text-align: center;
 }
 
 .nav-up {
-	top: -120px;
+	top: -50px;
 	transition: top 0.2s ease-in-out;
 }
 
@@ -31,7 +32,8 @@ header {
 }
 
 #nav-items {
-	
+	text-align: right;
+	margin-top: 10px;
 }
 
 .nav-item {
@@ -149,7 +151,7 @@ header {
 }
 
 #contact a {
-	color: #F29407;
+	color: var(--pink);
 	text-decoration: none;
 }
 
