--- a/styles/global.css
+++ b/styles/global.css
@@ -50,7 +50,7 @@ table, th, td {
   --pink: #FE7062;
   --mediumgray: #292929;
   --darkgray: #161818;
-  --white: #f3f3f3;
+  --white: #fff;
   --lightpink: #e4ddde;
 }
 
@@ -122,6 +122,10 @@ button {
     background-color: white;
     border: 2px solid black;
     margin-top: 20px;
+	font-family: "Barlow Extrabold";
+	font-size: 1rem;
+	letter-spacing: 3px;
+	text-transform: uppercase;
 
   	transition: background-color 0.2s ease-in-out,
               	color 0.2s ease-in-out;
@@ -287,15 +291,15 @@ p {
 	width: 100px;
 	margin-top: 1%;
 	margin-bottom: 3%;
-	background-color: white;
+	background-color: var(--darkgray);
 	position: block;
 }
 
 .divider {
 	height: 2px;
-	background-color: #505050; 
-	margin-top: 2%;
-	margin-bottom: 2%;
+	background-color: var(--mediumgray); 
+	margin-top: 5%;
+	margin-bottom: 5%;
 	width: 70%;
 	margin-left: 15%;
 	position: block;
