--- a/styles/projects.css
+++ b/styles/projects.css
@@ -11,7 +11,6 @@
 }
 
 .project-pic {
-    cursor: pointer;
     display: inline-block;
     float: left;
     width: 30vw;
@@ -60,6 +59,49 @@
 
 .header {
     margin-bottom: 5%;
+}
+
+.pw_prompt {
+    z-index: 5; /* Sit on top */
+    position:fixed;
+    left: 40%;
+    top: 40%;
+    margin-left:-50px;
+    padding:50px;
+    width:350px;
+    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.15);
+    background-color: white;
+    font-family: Barlow Regular;
+}
+
+.pw_prompt label {
+    display:block; 
+    margin-bottom:5px;
+}
+.pw_prompt input {
+    margin-bottom:10px;
+}
+
+#modal_background {
+  z-index: 1; /* Sit on top */
+  position: fixed; /* Stay in place */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(256,256,256,0.4); /* Black w/ opacity */
+}
+
+fieldset {
+    border: none;
+}
+
+input {
+    border: solid 2px var(--lightpink);
+    height: 40px;
+    width: 300px;
 }
 
 @media only screen and (max-width: 900px) {
