--- a/styles/projects.css
+++ b/styles/projects.css
@@ -62,7 +62,7 @@
 }
 
 .pw_prompt {
-    z-index: 5; /* Sit on top */
+    z-index: 6; /* Sit on top */
     position:fixed;
     top: 50%;
     left: 50%;
@@ -93,7 +93,7 @@
 }
 
 #modal_background {
-  z-index: 1; /* Sit on top */
+  z-index: 5; /* Sit on top */
   position: fixed; /* Stay in place */
   left: 0;
   top: 0;
@@ -101,30 +101,12 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(256,256,256,0.8); /* Black w/ opacity */
+  background-color: white; /* White w/ opacity */
 }
 
 #error_message {
     color: #da0000;
     margin-top: 10px;
-}
-
-fieldset {
-    border: none;
-}
-
-input {
-    border: solid 2px var(--lightpink);
-    height: 40px;
-    width: 300px;
-    font-size: 24px;
-}
-
-input:focus {
-    border: solid 2px var(--green);
-    outline: var(--green);
-    font-size: 24px;
-    background-color: rgba(24, 178, 118, 0.05)
 }
 
 
