restyled and added tabs

--- a/styles/global.css
+++ b/styles/global.css
@@ -173,6 +173,9 @@ button:hover {
 button:focus {
 	border: solid 3px var(--green);
     outline: var(--green);
+}
+
+button:active {
 	background-color: black;
 	color: white;
 }
