--- a/styles/global.css
+++ b/styles/global.css
@@ -278,6 +278,7 @@ h4 {
 p {
 	font-family: "Barlow Regular";
 	font-size: 1.125rem;
+	line-height: 1.5rem;
 	margin-top: .5rem;
 	margin-bottom: 1rem;
 }
