--- a/styles/global.css
+++ b/styles/global.css
@@ -241,8 +241,7 @@ button:active {
 
 /* Text Styles */
 h1 {
-	font-family: "Tokyo Outline";
-	font-weight: 400;
+	font-family: "Barlow ExtraBold";
 	font-size: 5.3rem;
 	line-height: 5.3rem;
 	margin-block-end: 0;
@@ -250,8 +249,7 @@ h1 {
 }
 
 h2 {
-	font-family: "Tokyo Regular";
-	font-weight: 400;
+	font-family: "Barlow ExtraBold";
 	font-size: 3rem;
 	padding-bottom: 5px;
 	margin-block-end: 0;
@@ -264,6 +262,7 @@ h3 {
 	margin-block-end: 0;
 	margin-block-start: 0;
 	margin-top: 1vh;
+	margin-bottom: .5vh;
 }
 
 h4 {
