--- a/styles/projects.css
+++ b/styles/projects.css
@@ -109,35 +109,34 @@
 @media only screen and (max-width: 900px) {
 
     .section {
-        margin-top: 5%;
-        margin-bottom: 5%;
-        box-shadow: none;
-        height: 100vh;
-        display: inline-table;
+        margin: 5%;
+        padding: 3%;
+        width: 84%;
+        float: none !important;
     }
 
-    .project-pic {
-        width: 100%;
-        height: auto;
-        margin-bottom: 5%;
-        border-radius: 0;
-        float: left !important;
+    .section-large {
+        margin: 5%;
+        width: 84%;
+        display: inline-block;
+        padding: 3%;
     }
 
     .project-info {
-        display: block;
-        width: 100%;
-        top: 0%;
-        margin-left: 0;
-        transform: translateY(0%);
-    }
-    
-    .project-pic-large {
-        width: 100%;
+        width: 84%;
     }
 
     .project-info-large {
-        width: 100%;
+        width: 84%;
     }
+
+    .project-pic-large {
+        width: 84vw;
+        height: auto;
+        display: block;
+        float: none;
+    }
+
+
 
 }
