updated nav item color

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -43,6 +43,7 @@ header {
 	margin-right: 20px;
 	margin-bottom: 15px;
 	cursor: pointer;
+	color: white;
 
     -webkit-transition: color 0.4s; /* Safari */
     transition: color 0.4s;
@@ -56,7 +57,7 @@ header {
 
 .nav-item:hover {
 	text-decoration: none;
-	color: white;
+	color: var(--purple);
     -webkit-transition: color 0.4s; /* Safari */
     transition: color 0.4s;
 }
