fixed homepage section heights

--- a/styles/global.css
+++ b/styles/global.css
@@ -186,8 +186,8 @@ button:hover {
 }
 
 button:focus {
-	border: solid 3px var(--green);
-    outline: var(--green);
+	border: solid 3px var(--white);
+    outline: var(--white);
 }
 
 button:active {
